# forensic-vfs

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  HANDOFF-phase2.md  README.md  clippy.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: adapters.rs  archive.rs  crypto.rs  encryption.rs  error.rs  fs.rs  lib.rs  locator.rs  pathspec.rs  read.rs  registry.rs  resolve.rs  uri.rs  volume.rs
crates/core/tests/: contracts.rs  coverage.rs  deleted_nodes.rs  file_id_reexport.rs  resolve.rs  volume_label.rs
crates/engine/: Cargo.toml  README.md
crates/engine/fuzz/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/tests/: open_aff4.rs  open_apfs.rs  open_apm.rs  open_exfat.rs  open_ext4.rs  open_fat.rs  open_gpt.rs  open_hfs.rs  open_iso.rs  open_ntfs_e01.rs  open_partitioned.rs  open_qcow2.rs  open_vhd.rs  open_vhdx.rs  open_vmdk.rs  open_xfs.rs  walk.rs
crates/engine/tests/data/: README.md
crates/forensic-vfs-core/: Cargo.toml
crates/forensic-vfs-core/src/: adapters.rs  error.rs  fs.rs  lib.rs  pathspec.rs  read.rs  registry.rs  source.rs  uri.rs  volume.rs
crates/forensic-vfs-core/tests/: contracts.rs  coverage.rs
crates/resolver/: CHANGELOG.md  Cargo.toml
crates/resolver/src/: lib.rs
crates/resolver/tests/: resolve.rs
docs/: PRD.md  architecture.md  design-history.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-positioned-read-contract.md  0002-opaque-fileid-filesystem.md  0003-four-layer-composition.md  0004-vfs-feature-gating.md  0005-safe-read-substrate.md  0006-knowledge-in-forensicnomicon.md  0007-retire-standalone-engine.md  0008-archives-as-probes.md  0009-fileid-in-forensicnomicon-core.md  0010-encryption-descent-and-credentialsource.md  0011-imagesource-as-resolver-terminal.md  0012-file-layer-and-segment-set-naming.md  0013-rename-pathspec-to-locator.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pathspec.rs  fuzz_read.rs
paper/: Makefile  README.md  universal-reader.bib  universal-reader.tex
supply-chain/: config.toml
