[workspace]
resolver = "2"
members = ["crates/core", "crates/engine"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-vfs"

[workspace.dependencies]
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
# The canonical filesystem-identity newtype (`FsKind`) lives here. Zero-dep, so a
# non-optional dep keeps the leaf/lean rule (design handoff): forensic-vfs
# re-exports it as its own `FsKind`.
forensicnomicon-core = "1.2"
# `findings` feature bridge — a non-default feature, so a reader that implements
# these traits does not inherit the full forensicnomicon facade (the true-leaf
# rule, design §4).
forensicnomicon = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
unwrap_used              = "deny"
expect_used              = "deny"
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
doc_markdown             = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"

# feat/engine WIP: the engine + the external reader path-deps all resolve
# forensic-vfs to THIS workspace's leaf, so their trait impls unify. Branch-only;
# main has no engine member and no patch.
[patch.crates-io]
forensic-vfs = { path = "crates/core" }
