[package]
name = "forensic-vfs-engine"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-vfs"
description = "The forensic-vfs registry + resolver: one Vfs::open(path) that detects the container/filesystem stack and mounts a read-only dyn FileSystem."
publish = false

[dependencies]
forensic-vfs = "0.1"
ewf       = { path = "../../../ewf-forensic/core", features = ["vfs"] }
ntfs-core = { path = "../../../ntfs-forensic/core", features = ["vfs"] }
vhd       = { version = "0.1", package = "vhd-core" }
qcow2     = { version = "0.3", package = "qcow2-core" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
