[package]
name = "forensic-vfs-engine"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-vfs"
description = "The forensic-vfs registry + resolver: one Vfs::open(path) that detects the container/filesystem stack and mounts a read-only dyn FileSystem."
publish = false

[dependencies]
forensic-vfs = "0.1"
ewf       = { path = "../../../ewf-forensic/core", features = ["vfs"] }
ntfs-core = { path = "../../../ntfs-forensic/core", features = ["vfs"] }
ext4fs    = { package = "ext4fs-core", path = "../../../ext4fs-forensic/ext4fs-core", features = ["vfs"] }
iso       = { package = "iso9660-forensic", path = "../../../iso9660-forensic/iso", features = ["vfs"] }
apfs-core = { path = "../../../apfs-forensic/core", features = ["vfs"] }
hfsplus   = { package = "hfsplus-forensic", path = "../../../hfsplus-forensic", features = ["vfs"] }
fat       = { package = "fat-core", path = "../../../fat-forensic/core", features = ["vfs"] }
vhd       = { version = "0.1", package = "vhd-core" }
qcow2     = { version = "0.3", package = "qcow2-core" }
vmdk      = { version = "0.8", package = "vmdk-core" }
vhdx      = { package = "vhdx-core", path = "../../../vhdx-forensic/core" }
apm       = { version = "0.6", package = "apm-partition-core" }
dmg       = { package = "dmg-core", path = "../../../dmg-forensic/core" }
aff4      = { path = "../../../aff4-forensic/core" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
