[package]
name         = "forensic-vfs-resolver"
version      = "0.3.1"
edition.workspace = true
rust-version.workspace = true
description  = "The generic layer resolver over the forensic-vfs contracts: sniff a byte source, match a registered prober, and descend container/volume/filesystem layers until a filesystem mounts — the evolving detection behavior, firewalled from the frozen forensic-vfs contract leaf"
license.workspace = true
repository.workspace = true
homepage      = "https://github.com/SecurityRonin/forensic-vfs"
documentation = "https://docs.rs/forensic-vfs-resolver"
authors       = ["Albert Hui"]
keywords      = ["forensics", "vfs", "disk-image", "filesystem", "dfir"]
categories    = ["filesystem", "parser-implementations"]

[dependencies]
# The frozen contract leaf: the `Registry` prober traits, `Locator`/`Layer`
# model, and byte-source edge this resolver drives. Path within the workspace;
# the `version` line lets `cargo publish` resolve the registry crate. Requires
# 0.7 for `FileSystem::volume_label()` (the defaulted filesystem-label accessor).
forensic-vfs = { path = "../core", version = "0.7" }
# EpochTag for SnapshotView — zero-dep KNOWLEDGE-tier leaf.
state-history-forensic = { workspace = true }

[lints]
workspace = true
